[package]
name = "twapi-ureq"
version = "0.1.4"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Twitter OAuth library used by ureq."
repository = "https://github.com/aoyagikouhei/twapi-ureq-rs"
keywords = ["twitter", "oauth"]
categories = ["api-bindings"]
readme = "Readme.md"
documentation = "https://docs.rs/twapi-ureq"

[dependencies]
base64 = "^0.13"
bytebuffer = "^0.2"
rand = "^0.7"
serde_json = "^1.0"
serde_urlencoded = "^0.7"
twapi-oauth = "~0.1.4"
ureq = { version = "^1.5", features = ["json"] }
