[package]
name = "twapi-ureq"
version = "0.2.1"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Twitter OAuth library used by ureq."
repository = "https://github.com/aoyagikouhei/twapi-ureq-rs"
keywords = ["twitter", "oauth"]
categories = ["api-bindings"]
readme = "Readme.md"
documentation = "https://docs.rs/twapi-ureq"

[dependencies]
base64 = "~0.13.0"
bytebuffer = "~0.2.1"
rand = "~0.8.3"
serde_json = "~1.0.64"
serde_urlencoded = "~0.7.0"
twapi-oauth = "~0.1.4"
ureq = { version = "~2.1.0", features = ["json"] }
